# story-guard-desktop-app

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: __init__.py  requirements.txt  sidecar.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repository.py
backend/sample/: korean_story.txt
backend/tests/: test_analyzer.py  test_api.py  test_local_ai.py  test_local_llm.py  test_ollama.py  test_parser.py  test_rag.py  test_repository.py
samples/: generation-model-comparison-test.md  organization-set-view-test.md  story-guard-continuity-test.md  story-guard-model-test.md  홍길동전.txt
samples/multi-episode/: episode-01.md  episode-02.md  episode-03.md  episode-04.md  episode-05.md
samples/original-serial-mist-route/: episode-01.txt  episode-02.txt  episode-03.txt  episode-04.txt  episode-05.txt  episode-06.txt
samples/public-domain/: dongbaekkkot.txt  memilkkot_pil_muryeop.txt  sources.md  unsu_joeun_nal.txt
samples/six-episode-continuity/: episode-01.md  episode-02.md  episode-03.md  episode-04.md  episode-05.md  episode-06.md
scripts/: build-backend-sidecar.sh  install-local-rust.sh  verify-desktop.sh
src/: App.closeHandling.test.ts  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisProgressPanel.test.tsx  AnalysisProgressPanel.tsx  GraphView.test.ts  GraphView.tsx  Inspector.tsx  SetupPanel.tsx  Sidebar.tsx  StartupLoader.test.tsx  StartupLoader.tsx
(+32 files in other folders)
