[package]
name = "story-guard"
version = "0.1.0"
description = "Local-first story continuity guard"
authors = ["Story Guard"]
edition = "2021"

[lib]
name = "story_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"
